# intake

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
backend/: Dockerfile  db.py  main.py  models.py  pyproject.toml
backend/agent/: graph.py  nodes.py  prompts.py  state.py
backend/services/: brief_generator.py  fhir_mapper.py  stt.py  tts.py
frontend/: components.json  eslint.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CallControls.tsx  ConversationView.tsx  IntakeBrief.tsx  StageIndicator.tsx
frontend/src/components/agents-ui/: agent-audio-visualizer-bar.tsx  agent-audio-visualizer-grid.tsx  agent-chat-indicator.tsx  agent-chat-transcript.tsx
frontend/src/components/ai-elements/: conversation.tsx  message.tsx
frontend/src/components/ui/: button-group.tsx  button.tsx  scroll-area.tsx  separator.tsx  tooltip.tsx
frontend/src/hooks/: use-multiband-volume.ts  useIntakeSocket.ts  useScribeTranscription.ts
frontend/src/hooks/agents-ui/: use-agent-audio-visualizer-bar.ts  use-agent-audio-visualizer-grid.ts
frontend/src/types/: intake.ts
