[project]
name = "intake-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "elevenlabs>=2.45.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain-core>=1.3.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langsmith>=0.8.0",
    "openai>=2.33.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.27",
    "reportlab>=4.5.0",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
]
